Quote: Align properly. Avatar: truncate correctly.

--- a/components/Avatar/Avatar.scss
+++ b/components/Avatar/Avatar.scss
@@ -12,3 +12,7 @@
   --Figure-width: #{rem($space-xl)};
   flex-shrink: 0;
 }
+
+.Avatar-meta {
+  min-width: 0;
+}
